--- a/config.json.example
+++ b/config.json.example
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "",
+  "TOKEN": "NzYyMzQyNjczOTE0MTM0NTI4.X3nw8Q.POBqACqI_SA3GRgeNWdVPF7-xiE",
   "YOUTUBE_API_KEY": "",
   "SOUNDCLOUD_CLIENT_ID": "",
   "MAX_PLAYLIST_SIZE": 10,
